--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
             width: 200px;
             z-index: 30;
         }
-        /* 기본 버튼 스타일 */
+        /* 기본 버튼 스타일 (크기 0.75배 축소) */
         .controls {
             position: fixed;
-            bottom: 20px;
+            bottom: 15px;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
             align-items: center;
-            gap: 20px;
+            gap: 15px;
             z-index: 20;
         }
         .btn {
-            width: 60px;
-            height: 60px;
+            width: 45px;  /* 기존의 60px → 45px */
+            height: 45px; /* 기존의 60px → 45px */
             background: white;
             border-radius: 50%;
-            border: 4px solid rgba(255, 255, 255, 0.8);
+            border: 3px solid rgba(255, 255, 255, 0.8); /* 기존의 4px → 3px */
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 14px;
+            font-size: 12px; /* 기존의 14px → 12px */
             font-weight: bold;
             cursor: pointer;
             text-align: center;
@@ -113,7 +113,7 @@
             width: 100%;
             display: flex;
             justify-content: center;
-            gap: 20px;
+            gap: 15px;
         }
     </style>
 </head>
